--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title> ❤️️ Horiseon ❤️️  </title>
 </head>
 
 <body>
@@ -74,7 +74,7 @@
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
+            &copy; 2023 Horiseon Social Solution Services, Inc.
         </p>
     </div>
 </body>
