--- a/index.html
+++ b/index.html
@@ -10,18 +10,15 @@
 
 <body>
     <header class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav>
+        <div class="logo">
+            <h1>Hori<span class="seo">seo</span>n</h1>
+    </div>
+
+    <nav class="navigation">
             <ul>
-                <li>
-                    <a href="#search-engine-optimization">SEO</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">ORM</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media</a>
-                </li>
+                <li><a href="#search-engine-optimization">SEO</a></li>
+                <li><a href="#online-reputation-management">ORM</a></li>
+                <li><a href="#social-media-marketing">Social Media</a></li>
             </ul>
         </nav>
     </header>
@@ -40,16 +37,14 @@
         <section class="service" id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="ORM Image" />
             <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+            <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
 
         <section class="service" id="social-media-marketing" >
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Image"/>
             <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+            <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
     </div>
@@ -58,29 +53,26 @@
         <div class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+            <p>Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+            <p>Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+            <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
     </div>
 
-    <class="footer">
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
-        <p>&copy; 2023 Horiseon Social Solution Services, Inc. </p>
+        <p>&copy; 2023 Horiseon Social Solution Services, Inc.</p>
 </footer>
 </body>
 
