--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-gb">
 
+<!-- add a logo and suitable title for the browser tab -->
+
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -8,13 +10,16 @@
     <title> Horiseon- Boosting your online presence with top SEO services </title>
 </head>
 
+<!-- remove several repetitive divisions -->
+
 <body>
     <header class="header">
         <div class="logo">
             <h1>Hori<span class="seo">seo</span>n</h1>
-    </div>
+        </div>
 
-    <nav class="navigation">
+        <!-- add a naviation class for the three services with navigation class -->
+        <nav class="navigation">
             <ul>
                 <li><a href="#search-engine-optimization">SEO</a></li>
                 <li><a href="#online-reputation-management">ORM</a></li>
@@ -25,55 +30,69 @@
 
     <div class="hero"></div>
 
-    <div class="content">
+    <!-- replace divisions with sections, add in alt for images-->
+    <main class="content">
         <section class="service" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="SEO Image" />
             <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+            <p>The dominance of mobile internet use means that users are searching for the right business as they
+                travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
+                your visibility and find the right customers for your business.
             </p>
         </section>
 
         <section class="service" id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="ORM Image" />
             <h2>Online Reputation Management</h2>
-            <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+            <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an
+                internet connection to say whatever they want about your business. Online Reputation Management gives
+                you the control over what potential customers see when they search for your business.
             </p>
         </section>
 
-        <section class="service" id="social-media-marketing" >
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Image"/>
+        <section class="service" id="social-media-marketing">
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Image" />
             <h2>Social Media Marketing</h2>
-            <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+            <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you
+                determine which platforms are suited to your brand, using analytics to find the right markets and
+                increase your lead generation.
             </p>
         </section>
-    </div>
+    </main>
 
-    <div class="benefits">
+    <!-- consolidate the benefits with a single class, add in alt for images -->
+    <aside class="benefits">
         <div class="benefit">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
-            <p>Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+            <img src="./assets/images/lead-generation.png" alt="Lead Generation Icon" />
+            <p>Inbound strategies for lead generation require less work for your business, bringing customers directly
+                to your website.
             </p>
         </div>
+
         <div class="benefit">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
-            <p>Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Icon" />
+            <p>Users find your business through paid and organic searches, increasing the search ranking and visibility
+                for your business.
             </p>
         </div>
+
         <div class="benefit">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
-            <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+            <img src="./assets/images/cost-management.png" alt="Cost Management Icon" />
+            <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer
+                need to advertise your page.
             </p>
         </div>
-    </div>
+
+    </aside>
 
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>&copy; 2023 Horiseon Social Solution Services, Inc.</p>
-</footer>
+    </footer>
+
 </body>
 
 </html>
