--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
+<!-- declaring document type and language as English -->
 <!DOCTYPE html>
 <html lang="en-gb">
 
 <!-- add a logo and suitable title for the browser tab -->
-
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -11,7 +11,6 @@
 </head>
 
 <!-- remove several repetitive divisions -->
-
 <body>
     <header class="header">
         <div class="logo">
